@@ -40,6 +40,7 @@ Not yet released.
   of related instances.
 - #176: get model attribute instead of column name when getting name of primary
   key.
+- #164: :http:method:`patch` requests update fields on related instances.
 
 Version 0.9.3
 -------------
